+button_markup n _css +card_css

--- a/menu.html
+++ b/menu.html
@@ -83,14 +83,12 @@
 
               <div class="menu-card__header-text">
                 <h3 class="menu-card__title menu-card__title--1">Espresso</h3>
-                <span class="menu-card__status">$ 3.75</span>
+                <span class="menu-card__status">$ 2.50</span>
               </div>
             </div>
             <div class="menu-card__details">
               <ul class="menu-card-list">
                 <li>Espresso</li>
-                <li>Water</li>
-                <li>Water</li>
                 <li>Water</li>
               </ul>
               <button
@@ -117,16 +115,15 @@
               </svg>
 
               <div class="menu-card__header-text">
-                <h3 class="menu-card__title menu-card__title--2">Espresso</h3>
-                <span class="menu-card__status">$ 3.75</span>
+                <h3 class="menu-card__title menu-card__title--2">Latte</h3>
+                <span class="menu-card__status">$ 3.50</span>
               </div>
             </div>
             <div class="menu-card__details">
               <ul class="menu-card-list">
                 <li>Espresso</li>
                 <li>Water</li>
-                <li>Water</li>
-                <li>Water</li>
+                <li>Steamed Milk</li>
               </ul>
               <button
                 class="card-add-btn hero__content--text__button button-click menu-button"
@@ -152,16 +149,16 @@
               </svg>
 
               <div class="menu-card__header-text">
-                <h3 class="menu-card__title menu-card__title--3">Espresso</h3>
-                <span class="menu-card__status">$ 3.75</span>
+                <h3 class="menu-card__title menu-card__title--3">Cappuccino</h3>
+                <span class="menu-card__status">$ 3.00</span>
               </div>
             </div>
             <div class="menu-card__details">
               <ul class="menu-card-list">
                 <li>Espresso</li>
                 <li>Water</li>
-                <li>Water</li>
-                <li>Water</li>
+                <li>Steamed Milk</li>
+                <li>Milk Foam</li>
               </ul>
               <button
                 class="card-add-btn hero__content--text__button button-click menu-button"
@@ -187,16 +184,16 @@
               </svg>
 
               <div class="menu-card__header-text">
-                <h3 class="menu-card__title menu-card__title--2">Espresso</h3>
-                <span class="menu-card__status">$ 3.75</span>
+                <h3 class="menu-card__title menu-card__title--2">Cold Brew</h3>
+                <span class="menu-card__status">$ 4.00</span>
               </div>
             </div>
             <div class="menu-card__details">
               <ul class="menu-card-list">
                 <li>Espresso</li>
                 <li>Water</li>
-                <li>Water</li>
-                <li>Water</li>
+                <li>Cold Milk</li>
+                <li>Choco-Syrup</li>
               </ul>
               <button
                 class="card-add-btn hero__content--text__button button-click menu-button"
@@ -222,15 +219,13 @@
               </svg>
 
               <div class="menu-card__header-text">
-                <h3 class="menu-card__title menu-card__title--1">Espresso</h3>
-                <span class="menu-card__status">$ 3.75</span>
+                <h3 class="menu-card__title menu-card__title--1">Americano</h3>
+                <span class="menu-card__status">$ 4.00</span>
               </div>
             </div>
             <div class="menu-card__details">
               <ul class="menu-card-list">
                 <li>Espresso</li>
-                <li>Water</li>
-                <li>Water</li>
                 <li>Water</li>
               </ul>
               <button
@@ -257,16 +252,15 @@
               </svg>
 
               <div class="menu-card__header-text">
-                <h3 class="menu-card__title menu-card__title--3">Espresso</h3>
-                <span class="menu-card__status">$ 3.75</span>
+                <h3 class="menu-card__title menu-card__title--3">Macchiato</h3>
+                <span class="menu-card__status">$ 4.50</span>
               </div>
             </div>
             <div class="menu-card__details">
               <ul class="menu-card-list">
                 <li>Espresso</li>
-                <li>Water</li>
-                <li>Water</li>
-                <li>Water</li>
+                <li>Steamed Milk</li>
+                <li>Milk Foam</li>
               </ul>
               <button
                 class="card-add-btn hero__content--text__button button-click menu-button"
@@ -292,16 +286,15 @@
               </svg>
 
               <div class="menu-card__header-text">
-                <h3 class="menu-card__title menu-card__title--3">Espresso</h3>
-                <span class="menu-card__status">$ 3.75</span>
+                <h3 class="menu-card__title menu-card__title--3">Flat White</h3>
+                <span class="menu-card__status">$ 4.75</span>
               </div>
             </div>
             <div class="menu-card__details">
               <ul class="menu-card-list">
                 <li>Espresso</li>
-                <li>Water</li>
-                <li>Water</li>
-                <li>Water</li>
+                <li>Steamed Milk</li>
+                <li>Milk Foam</li>
               </ul>
               <button
                 class="card-add-btn hero__content--text__button button-click menu-button"
@@ -327,16 +320,16 @@
               </svg>
 
               <div class="menu-card__header-text">
-                <h3 class="menu-card__title menu-card__title--1">Espresso</h3>
-                <span class="menu-card__status">$ 3.75</span>
+                <h3 class="menu-card__title menu-card__title--1">Affogato</h3>
+                <span class="menu-card__status">$ 5.00</span>
               </div>
             </div>
             <div class="menu-card__details">
               <ul class="menu-card-list">
                 <li>Espresso</li>
                 <li>Water</li>
-                <li>Water</li>
-                <li>Water</li>
+                <li>Steamed Milk</li>
+                <li>Vanilla Gelato</li>
               </ul>
               <button
                 class="card-add-btn hero__content--text__button button-click menu-button"
@@ -362,16 +355,16 @@
               </svg>
 
               <div class="menu-card__header-text">
-                <h3 class="menu-card__title menu-card__title--2">Espresso</h3>
-                <span class="menu-card__status">$ 3.75</span>
+                <h3 class="menu-card__title menu-card__title--2">Tea</h3>
+                <span class="menu-card__status">$ 1.75</span>
               </div>
             </div>
             <div class="menu-card__details">
               <ul class="menu-card-list">
-                <li>Espresso</li>
+                <li>Tea Leaves</li>
                 <li>Water</li>
-                <li>Water</li>
-                <li>Water</li>
+                <li>Steamed Milk</li>
+                <li>Cardamom</li>
               </ul>
               <button
                 class="card-add-btn hero__content--text__button button-click menu-button"
@@ -397,16 +390,19 @@
               </svg>
 
               <div class="menu-card__header-text">
-                <h3 class="menu-card__title menu-card__title--3">Espresso</h3>
-                <span class="menu-card__status">$ 3.75</span>
+                <h3 class="menu-card__title menu-card__title--3">
+                  Coffee Shake
+                </h3>
+                <span class="menu-card__status">$ 5.25</span>
               </div>
             </div>
             <div class="menu-card__details">
               <ul class="menu-card-list">
                 <li>Espresso</li>
                 <li>Water</li>
-                <li>Water</li>
-                <li>Water</li>
+                <li>Cold Milk</li>
+                <li>Ice Cream</li>
+                <li>Choco Chips</li>
               </ul>
               <button
                 class="card-add-btn hero__content--text__button button-click menu-button"
@@ -432,7 +428,7 @@
               </svg>
 
               <div class="menu-card__header-text">
-                <h3 class="menu-card__title menu-card__title--2">Espresso</h3>
+                <h3 class="menu-card__title menu-card__title--2">Cafe Breve</h3>
                 <span class="menu-card__status">$ 3.75</span>
               </div>
             </div>
@@ -440,8 +436,8 @@
               <ul class="menu-card-list">
                 <li>Espresso</li>
                 <li>Water</li>
-                <li>Water</li>
-                <li>Water</li>
+                <li>Steamed Milk</li>
+                <li>Milk Foam</li>
               </ul>
               <button
                 class="card-add-btn hero__content--text__button button-click menu-button"
