+about_page +tweaks -unused images

--- a/about.html
+++ b/about.html
@@ -63,9 +63,78 @@
       </div>
 
       <!-- Right hanging cards -->
-      <div class="about-do--1">Doing 1</div>
-      <div class="about-do--2">Doing 2</div>
-      <div class="about-do--3">Doing 3</div>
+      <div class="about-do--1">
+        <div href="" class="about-card about-card--1">
+          <img src="img/what.png" class="about-card__image" alt="" />
+          <div class="about-card__overlay">
+            <div class="about-card__header">
+              <svg class="about-card__arc" xmlns="http://www.w3.org/2000/svg">
+                <path />
+              </svg>
+
+              <div class="about-card__header-text">
+                <h3 class="about-card__title about-card__title--item">
+                  What I do?
+                </h3>
+              </div>
+            </div>
+            <div class="about-card__details">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem,
+              nostrum animi provident ducimus consequuntur modi sequi molestiae
+              cum quam qui sapiente a consequatur sunt! Quae id veniam illo
+              cupiditate consectetur.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="about-do--2">
+        <div href="" class="about-card about-card--2">
+          <img src="img/how.png" class="about-card__image" alt="" />
+          <div class="about-card__overlay">
+            <div class="about-card__header">
+              <svg class="about-card__arc" xmlns="http://www.w3.org/2000/svg">
+                <path />
+              </svg>
+
+              <div class="about-card__header-text">
+                <h3 class="about-card__title about-card__title--item">
+                  How I do?
+                </h3>
+              </div>
+            </div>
+            <div class="about-card__details">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+              harum ipsum iure neque eum repudiandae illo architecto assumenda
+              dolorem modi ullam perferendis, blanditiis ex dolor deserunt at
+              corporis reprehenderit vero.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="about-do--3">
+        <div href="" class="about-card about-card--3">
+          <img src="img/next.png" class="about-card__image" alt="" />
+          <div class="about-card__overlay">
+            <div class="about-card__header">
+              <svg class="about-card__arc" xmlns="http://www.w3.org/2000/svg">
+                <path />
+              </svg>
+
+              <div class="about-card__header-text">
+                <h3 class="about-card__title about-card__title--item">
+                  What's next?
+                </h3>
+              </div>
+            </div>
+            <div class="about-card__details">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet est
+              pariatur similique tempora possimus architecto facilis repudiandae
+              quas eligendi saepe optio totam, molestiae quam laudantium ex
+              doloremque autem dolor natus?
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
