--- a/index.html
+++ b/index.html
@@ -122,12 +122,16 @@
             special ingredient added during the brewing. We'll never know but .
             . .
 
-            <button class="section-button margin-top-sm">Read more</button>
+            <button href="#readmore" class="section-button margin-top-sm">Read more</button>
           </div>
         </div>
- 
-
       </section>
+
+      <div id="readmore" class="read">
+        <div class="read-box">
+          <p>hello i am under the water</p>
+        </div>        
+      </div>
 
       <!-- Section history -->
       <div class="section-history-testimonial-background">
