--- a/menu.html
+++ b/menu.html
@@ -69,6 +69,16 @@
             consectetur sequi repellat quo?
           </div>
         </div>
+
+        <div class="ingredients">
+          <div class="ingredients--item">Money: <span>{{ money }}</span></div>
+          <div class="ingredients--item">Water: <span>{{ water }}</span></div>
+          <div class="ingredients--item">Milk: <span>{{ milk }}</span></div>
+          <div class="ingredients--item">Beans: <span>{{ beans }}</span></div>
+          <div class="ingredients--item">Cups: <span>{{ cups }}</span></div>
+        </div>
+        <button class="hero__content--text__button button-click check-out">
+          Check Out
       </div>
 
       <!-- Right hanging cards -->
@@ -101,6 +111,9 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div>
             </div>
           </div>
         </div>
@@ -135,6 +148,10 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div> 
+
             </div>
           </div>
         </div>
@@ -170,6 +187,9 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div> 
             </div>
           </div>
         </div>
@@ -205,6 +225,9 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div> 
             </div>
           </div>
         </div>
@@ -238,6 +261,9 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div> 
             </div>
           </div>
         </div>
@@ -272,6 +298,9 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div> 
             </div>
           </div>
         </div>
@@ -306,6 +335,9 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div> 
             </div>
           </div>
         </div>
@@ -341,6 +373,9 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div> 
             </div>
           </div>
         </div>
@@ -376,6 +411,9 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div> 
             </div>
           </div>
         </div>
@@ -414,6 +452,9 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div> 
             </div>
           </div>
         </div>
@@ -449,6 +490,9 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div> 
             </div>
           </div>
         </div>
@@ -484,6 +528,9 @@
               >
                 Remove
               </button>
+              <div class="quantity">
+                <div class="quantity--item">Quantity: <span class="">{{ es_num }}</span></div>
+              </div> 
             </div>
           </div>
         </div>
